--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,59 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
 
+*{
+	margin: 0;
+	padding: 0;
+}
+
 body
 {
 	margin: 0;
 	padding: 0;
 	font-family: 'Open Sans', sans-serif;
-
+	color:#ffffff;
+	line-height: 1.6;
+}
+#imageview {
+	background-image:url('https://images.pexels.com/photos/2131772/pexels-photo-2131772.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260');
+	background-size: cover;
+	background-position: center;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding: 0 20px;
 
 }
+
+#imageview h1
+{
+	font-size: 60px;
+	line-height: 1.2;
+
+}
+
+#imageview p
+{
+	font-size: 40px;
+	line-height: 1.2;
+	margin-bottom: 20px;
+	
+}
+
+
+
 .email
 {
-	position: absolute;
-	top: 20px
-	right:20px;
-	background: ;
+	border:#f08f00 3px solid;
 	color: #ffff;
-	width: 60px;
+	width: 200px;
 	height: 60px;
-	border-radius: 50%;
+	border-radius:10px;
 	text-align: center;
 	line-height: 60px;
-	font-size: 24px;
+	font-size: 30px;
 	cursor: pointer;
 	transition: .5s;
 }
@@ -37,10 +70,9 @@ body
 	left: 50px;
 	width: 100%;
 	height: 100vh;
-	background: #000000;
 	transition: .5s;
 	transform: scale(0);
-	transform-origin: top left;
+	transform-origin: middle;
 	border-radius: 50%;
 }
 .overlap.active
@@ -168,10 +200,22 @@ body
 }
 
 
+#text-section-a
+{
+	padding: 20px;
+	background:#587797;
+	color: #ffffff;
+	text-align: center;
+}
 
 
-
-
+#text-section-b
+{
+	padding: 20px;
+	background:#f4f4f4;
+	text-align: center;
+	color: #f08f00;
+}
 
 
 
